feat: v1.1.0 - Arrow key navigation and project governance
New Features:
- Arrow key navigation in interactive mode using questionary
- Visual selection highlighting with custom purple/green styling
- Up/Down arrows + Enter to select (much more intuitive)
- Fallback to number input if questionary unavailable

Project Governance:
- CODE_OF_CONDUCT.md (Contributor Covenant v2.0)
- CONTRIBUTING.md (development guidelines, code style, testing)
- SECURITY.md (vulnerability reporting, data privacy)
- GitHub issue templates (bug report, feature request, question)
- Pull request template with comprehensive checklist
- Issue template config with documentation shortcuts

Contact Updates:
- Author: Tim Gatzke
- Email: post@tim-gatzke.de
- Website: tim-gatzke.de
- Updated throughout all project files

Dependencies:
- Added questionary>=2.0.0 for enhanced TUI
- Added to requirements.txt and setup.py

This is a minor version bump (1.0.x -> 1.1.0) due to new features.

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 # Core dependencies (required)
 rich>=13.0.0
+questionary>=2.0.0   # For interactive TUI with arrow key navigation
 
 # File format support (optional)
 python-docx>=0.8.11  # For Word Document (.docx) support
